# money-pilot

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: Cargo.toml  package.json  wrangler.toml
apps/api/src/: lib.rs
apps/web/: index.html  package.json  tsconfig.node.json  vite.config.ts
apps/web/src/: main.tsx  router.tsx  styles.css
apps/web/src/lib/: api.ts  format.ts
apps/web/src/store/: ui-store.ts
apps/web/src/ui/: AppLayout.tsx
apps/web/src/ui/components/: DataTable.tsx
apps/web/src/ui/pages/: AccountsPage.tsx  CheckinPage.tsx  DashboardPage.tsx  ExpensesPage.tsx  SnapshotsPage.tsx
db/migrations/: 0001_init.sql  0002_account_masters.sql  0003_new_snapshots.sql
docs/: database-schema.md
